--- a/style.css
+++ b/style.css
@@ -16,14 +16,14 @@ body {
     box-sizing: border-box;
 }
 
-.full__grid {
+/* .full__grid {
     display: grid;
     grid-template-areas: "head" 
                           "main"
                           "foot";
 
     grid-template-rows: 10vh 80vh 10vh;
-}
+} */
 
 .heading__main, 
 .foot {
@@ -38,10 +38,12 @@ body {
 
 .foot {
     font-size: 2rem;
+    margin-top: 2rem;
 }
 
 main {
-    grid-area: main;
+    /* grid-area: main; */
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -71,6 +73,7 @@ main {
     flex-grow: 0;
     overflow: hidden;
     display: grid;
+   
 
     border-radius: 5rem;
     border: 5px solid darkred;
