add small screen media querie. update readme

--- a/style.css
+++ b/style.css
@@ -155,3 +155,14 @@ main {
     font-size: 3rem;
   }
 }
+
+@media screen and (max-width: 300px) {
+  html {
+    font-size: 15%;
+  }
+
+  .btn {
+    padding: 0.5rem;
+    font-size: 3rem;
+  }
+}
